--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ __pycache__
 Brain/__pycache__
 Exceptions/__pycache__
 HumanMachineInterface/__pycache__
+InternalComponents/Browser/__pycache__
 venv
 SU - Shortcut.lnk
